# ContextBench

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs-pages.yml
agent-frameworks/: .gitignore
agent-frameworks/agentless/: README.md  bench_sources.py  requirements.txt  run_bench.py
agent-frameworks/claude-code/: run_bench.py
agent-frameworks/codex/: run_bench.py
contextbench/: evaluate.py  process_trajectories.py  run.py  run_suites.py
contextbench/agents/: __init__.py  adapter_base.py  base.py  registry.py
contextbench/coding_agents/: __init__.py  constants.py  conversion.py  files.py  prompting.py  records.py  response_parsing.py  runtime.py  runtime_common.py  task_data.py  trace_inference.py  types.py
contextbench/core/: repo.py
contextbench/parsers/: __init__.py  custom_parser.py  trajectory.py
contextbench/run_suites_core/: __init__.py  config.py  helpers.py  postprocess.py  runner.py  types.py
contextbench/schemas/: coding_agent_output.schema.json
data/: Multi.csv  Poly.csv  Pro.csv  Verified.csv
docs/: agents.md  process_trajectories.md  requirements.txt  results-folder-guide.md  run_agent_on_contextbench.md
docs/source/: agents.rst  citation.rst  conf.py  contributing.rst  datasets.rst  environment_variables.rst  index.rst  (+9 more)
tests/: conftest.py  test_coding_agent_conversion.py  test_coding_agent_parsers.py  test_coding_agent_runtime.py  test_coding_agent_task_data.py  test_evaluate.py  test_export_comparison_data.py  test_export_site_data.py  test_run_suites.py
(+68 files in other folders)
