# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextbench-fork"
version = "0.1.0"
description = "Forked ContextBench with thin Codex and Claude integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Norbert Laszlo" }]
dependencies = [
  "tree-sitter==0.20.4; python_version < '3.13'",
  "tree-sitter>=0.24,<0.25; python_version >= '3.13'",
  "tree-sitter-languages==1.10.2; python_version < '3.13'",
  "tree-sitter-language-pack==0.7.3; python_version >= '3.13'",
  "datasets",
  "pyarrow",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "jsonschema>=4,<5",
]

[tool.setuptools.packages.find]
include = ["contextbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
